--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <a href="./ltr"><h2>LTR</h2></a>
         <a href="./rtl"><h2>RTL</h2></a>
     </div>
+<script src="https://unpkg.com/godratmand-ui@1.1.0/build/Smart-Dark.min.js"></script>
 </shaft></body>
 </html>
