--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body theme="center-box"><shaft style="min-width: 230px;">
     <div d-flex flex-dir-column align-items-center>
-        <a href=""><img src="https://icongr.am/jam/book.svg?size=186&color=c68801"></a>
+        <a href="https://github.com/Gnkalk/Book-template"><img src="https://icongr.am/jam/book.svg?size=186&color=c68801"></a>
         <a href="./ltr"><h2>LTR</h2></a>
         <a href="./rtl"><h2>RTL</h2></a>
     </div>
