--- a/rtl/index.html
+++ b/rtl/index.html
@@ -79,6 +79,6 @@
     var Lang = "fa";
 </script>
 <script src="https://unpkg.com/godratmand-ui@1.1.0/build/Smart-Dark.min.js"></script>
-<script src="./../src/main.js"></script>
+<script src="./../src/Book.js"></script>
 </body>
 </html>
