--- a/ltr/index.html
+++ b/ltr/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/godratmand-ui@1.2.0/build/GodUi.min.css">
-    <link rel="stylesheet" href="./../src/style.css">
+    <link rel="stylesheet" href="./../src/Book.css">
     <link rel="shortcut icon" href="https://icongr.am/jam/book.svg?size=64&color=c68801" type="image/x-icon">
     <title>Book tamplate</title>
 </head>
