--- a/ltr/index.html
+++ b/ltr/index.html
@@ -1,84 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/godratmand-ui@1.2.0/build/GodUi.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/godratmand-ui@1.3.1/build/GodUi.min.css">
     <link rel="stylesheet" href="./../src/Book.css">
     <link rel="shortcut icon" href="https://icongr.am/jam/book.svg?size=64&color=c68801" type="image/x-icon">
     <title>Book tamplate</title>
 </head>
+
 <body theme="book">
-<shaft>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-    <page>
-        <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
-        </article>
-    </page>
-</shaft>
-<button next theme="inline" onclick="nextPageMob();">〉</button>
-<button prev theme="inline" onclick="prevPageMob();">〈</button>
-<script>
-    var bookName = "Book";
-    var Lang = "en";
-</script>
-<script src="https://unpkg.com/godratmand-ui@1.1.0/build/Smart-Dark.min.js"></script>
-<script src="./../src/Book.js"></script>
+    <shaft>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+        <page>
+            <article>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi doloremque omnis beatae tenetur asperiores
+                eveniet repudiandae mollitia! Consequatur nihil nobis commodi quia beatae, necessitatibus delectus
+                dolorem praesentium corrupti facilis eius. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui
+                ad, fugit culpa iure iusto amet in dolores sunt laudantium, eaque quisquam dolor modi at nisi saepe
+                ipsam, hic numquam magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, architecto.
+            </article>
+        </page>
+    </shaft>
+    <button next theme="inline" onclick="nextPageMob();">〉</button>
+    <button prev theme="inline" onclick="prevPageMob();">〈</button>
+    <script>
+        var bookName = "Book";
+        var Lang = "en";
+    </script>
+    <script src="https://unpkg.com/godratmand-ui@1.1.0/build/Smart-Dark.min.js"></script>
+    <script src="./../src/Book.js"></script>
 </body>
+
 </html>
