--- a/rtl/index.html
+++ b/rtl/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/godratmand-ui@1.3.1/build/GodUi.rtl.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/rastikerdar/vazirmatn@v33.003/Vazirmatn-font-face.css">
     <link rel="stylesheet" href="./../src/Book.css">
     <link rel="shortcut icon" href="https://icongr.am/jam/book.svg?size=64&color=c68801" type="image/x-icon">
     <title>قالب کتاب</title>
